meson: Attempt to build a basic zbus Rust program with meson
```
$ meson setup build --wipe --reconfigure \
  -Dconcurrent-queue-2-rs:feature-default=true \
  -Dfutures-io-0.3-rs:feature-default=true \
  -Dfutures-lite-2-rs:feature-default=true
```

Error:

```
Executing subproject zbus-5.1.1-rs:async-io-2-rs:rustix-0.38-rs method cargo

rustix-0.38-rs| Generated Meson AST: /root/openbmc/dbus-sensors/build/subprojects/rustix-0.38.37/meson.build
rustix-0.38-rs| Project name: rustix
rustix-0.38-rs| Project version: 0.38.37
rustix-0.38-rs| Rust compiler for the host machine: rustc -C linker=cc (rustc 1.83.0)
rustix-0.38-rs| Rust linker for the host machine: rustc -C linker=cc ld.bfd 2.43.1-2

subprojects/rustix-0.38.37/meson.build:105:-1: ERROR: Unknown variable "linux_raw_sys_options".
```

Change-Id: I3283f7b5d23546fef48fcbeb6dc1736606fb7939
Signed-off-by: Peter Delevoryas <peter@pjd.dev>

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,13 @@
 project(
     'dbus-sensors',
     'cpp',
-    default_options: ['warning_level=3', 'werror=true', 'cpp_std=c++23'],
+    'rust',
+    default_options: [
+        'warning_level=3',
+        'werror=true',
+        'cpp_std=c++23',
+        'rust_std=2021',
+    ],
     license: 'Apache-2.0',
     version: '0.1',
     meson_version: '>=1.1.1',
