rust: Example of adding a test
```
$ cargo test -- --nocapture
    Finished `test` profile [unoptimized + debuginfo] target(s) in 0.04s
     Running unittests src/hello.rs (target/debug/deps/hellosensor-c7be28f0ecc31251)

running 0 tests

test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.00s

     Running src/tests/test-hello.rs (target/debug/deps/test_hello-9f2bd789dfa3f958)

running 1 test
hello testing stuff
test test_stuff ... ok

test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.00s
```

Change-Id: I8c31e9663f764b76e0b90eda9af461e784dc19fe

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ zbus = "5.1.1"
 [[bin]]
 name = "hellosensor"
 path = "src/hello.rs"
+
+[[test]]
+name = "test-hello"
+path = "src/tests/test-hello.rs"
